parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTS
    NOT
    VOID

Grammar

Rule 0     S' -> prgm
Rule 1     prgm -> prgm stmt
Rule 2     prgm -> <empty>
Rule 3     stmt -> funcdef
Rule 4     stmt -> funccall SEMICOLON
Rule 5     stmt -> declare
Rule 6     stmt -> assign
Rule 7     stmt -> ifstmt
Rule 8     stmt -> whilestmt
Rule 9     stmt -> printstmt
Rule 10    stmt2 -> stmt2 stmtelt
Rule 11    stmt2 -> <empty>
Rule 12    stmtelt -> funccall SEMICOLON
Rule 13    stmtelt -> declare
Rule 14    stmtelt -> assign
Rule 15    stmtelt -> ifstmt
Rule 16    stmtelt -> whilestmt
Rule 17    stmtelt -> printstmt
Rule 18    stmtelt -> returnstmt
Rule 19    stmtelt -> continuestmt
Rule 20    stmtelt -> breakstmt
Rule 21    funcdef -> FUNCTION type IDENTIFIER funcdefy LCB nulltypeargsx RCB LFB stmt2 RFB fundefexit
Rule 22    funcdefy -> <empty>
Rule 23    fundefexit -> <empty>
Rule 24    nulltypeargsx -> nulltypeargs
Rule 25    nulltypeargs -> typeargs
Rule 26    nulltypeargs -> <empty>
Rule 27    typeargs -> typeargs typearg
Rule 28    typeargs -> typearg
Rule 29    typearg -> type typeargval
Rule 30    typeargval -> IDENTIFIER
Rule 31    expr -> expr OR andterm
Rule 32    expr -> andterm
Rule 33    andterm -> andterm AND equalterm
Rule 34    andterm -> equalterm
Rule 35    equalterm -> equalterm LOG relopterm
Rule 36    equalterm -> relopterm
Rule 37    relopterm -> relopterm RELOP arithterm
Rule 38    relopterm -> arithterm
Rule 39    arithterm -> arithterm ARITHOP multerm
Rule 40    arithterm -> multerm
Rule 41    multerm -> multerm MULTOP singleterm
Rule 42    multerm -> singleterm
Rule 43    singleterm -> IDENTIFIER
Rule 44    singleterm -> prefix INTNUM
Rule 45    singleterm -> prefix FLOATNUM
Rule 46    singleterm -> CHARACTER
Rule 47    singleterm -> LCB expr RCB
Rule 48    singleterm -> arrayid
Rule 49    prefix -> ARITHOP
Rule 50    prefix -> <empty>
Rule 51    assign -> lhs ASSIGN rhs SEMICOLON
Rule 52    lhs -> IDENTIFIER
Rule 53    lhs -> arrayid
Rule 54    rhs -> inputstmt
Rule 55    rhs -> expr
Rule 56    rhs -> funccall
Rule 57    inputstmt -> INPUT LCB type RCB
Rule 58    funccall -> IDENTIFIER LCB nullargs RCB
Rule 59    nullargs -> args
Rule 60    nullargs -> <empty>
Rule 61    args -> args SEPARATORS arg
Rule 62    args -> arg
Rule 63    arg -> IDENTIFIER
Rule 64    arg -> prefix INTNUM
Rule 65    arg -> prefix FLOATNUM
Rule 66    arg -> CHARACTER
Rule 67    arg -> arrayid
Rule 68    ifstmt -> IF LCB expr RCB LFB ifbegin stmt2 RFB ifend elsepart
Rule 69    ifbegin -> <empty>
Rule 70    ifend -> <empty>
Rule 71    elsepart -> ELSE LFB elsebegin stmt2 RFB elseend
Rule 72    elsebegin -> <empty>
Rule 73    elseend -> <empty>
Rule 74    elsepart -> <empty>
Rule 75    whilestmt -> WHILE LCB expr RCB LFB whilebegin stmt2 RFB whileend
Rule 76    whilebegin -> <empty>
Rule 77    whileend -> <empty>
Rule 78    printstmt -> PRINT LCB printables RCB SEMICOLON
Rule 79    printables -> printables SEPARATORS printable
Rule 80    printables -> printable
Rule 81    printable -> STRING
Rule 82    printable -> IDENTIFIER
Rule 83    printable -> arrayid
Rule 84    returnstmt -> RETURN returnelt SEMICOLON
Rule 85    returnelt -> expr
Rule 86    returnelt -> <empty>
Rule 87    breakstmt -> BREAK SEMICOLON
Rule 88    continuestmt -> CONTINUE SEMICOLON
Rule 89    declare -> type vars SEMICOLON
Rule 90    type -> FLOAT
Rule 91    type -> INT
Rule 92    type -> CHAR
Rule 93    vars -> var SEPARATORS vars
Rule 94    vars -> var
Rule 95    var -> IDENTIFIER val
Rule 96    var -> arrayvar
Rule 97    arrayvar -> arrayvar LSB INTNUM RSB
Rule 98    arrayvar -> IDENTIFIER LSB INTNUM RSB
Rule 99    arrayid -> arrayid1
Rule 100   arrayid1 -> arrayid1 LSB index RSB
Rule 101   arrayid1 -> IDENTIFIER LSB index RSB
Rule 102   index -> INTNUM
Rule 103   index -> IDENTIFIER
Rule 104   val -> ASSIGN expr
Rule 105   val -> ASSIGN inputstmt
Rule 106   val -> ASSIGN funccall
Rule 107   val -> <empty>

Terminals, with rules where they appear

AND                  : 33
ARITHOP              : 39 49
ASSIGN               : 51 104 105 106
BREAK                : 87
CHAR                 : 92
CHARACTER            : 46 66
COMMENTS             : 
CONTINUE             : 88
ELSE                 : 71
FLOAT                : 90
FLOATNUM             : 45 65
FUNCTION             : 21
IDENTIFIER           : 21 30 43 52 58 63 82 95 98 101 103
IF                   : 68
INPUT                : 57
INT                  : 91
INTNUM               : 44 64 97 98 102
LCB                  : 21 47 57 58 68 75 78
LFB                  : 21 68 71 75
LOG                  : 35
LSB                  : 97 98 100 101
MULTOP               : 41
NOT                  : 
OR                   : 31
PRINT                : 78
RCB                  : 21 47 57 58 68 75 78
RELOP                : 37
RETURN               : 84
RFB                  : 21 68 71 75
RSB                  : 97 98 100 101
SEMICOLON            : 4 12 51 78 84 87 88 89
SEPARATORS           : 61 79 93
STRING               : 81
VOID                 : 
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

andterm              : 31 32 33
arg                  : 61 62
args                 : 59 61
arithterm            : 37 38 39
arrayid              : 48 53 67 83
arrayid1             : 99 100
arrayvar             : 96 97
assign               : 6 14
breakstmt            : 20
continuestmt         : 19
declare              : 5 13
elsebegin            : 71
elseend              : 71
elsepart             : 68
equalterm            : 33 34 35
expr                 : 31 47 55 68 75 85 104
funccall             : 4 12 56 106
funcdef              : 3
funcdefy             : 21
fundefexit           : 21
ifbegin              : 68
ifend                : 68
ifstmt               : 7 15
index                : 100 101
inputstmt            : 54 105
lhs                  : 51
multerm              : 39 40 41
nullargs             : 58
nulltypeargs         : 24
nulltypeargsx        : 21
prefix               : 44 45 64 65
prgm                 : 1 0
printable            : 79 80
printables           : 78 79
printstmt            : 9 17
relopterm            : 35 36 37
returnelt            : 84
returnstmt           : 18
rhs                  : 51
singleterm           : 41 42
stmt                 : 1
stmt2                : 10 21 68 71 75
stmtelt              : 10
type                 : 21 29 57 89
typearg              : 27 28
typeargs             : 25 27
typeargval           : 29
val                  : 95
var                  : 93 94
vars                 : 89 93
whilebegin           : 75
whileend             : 75
whilestmt            : 8 16

Parsing method: LALR

state 0

    (0) S' -> . prgm
    (1) prgm -> . prgm stmt
    (2) prgm -> .

    FUNCTION        reduce using rule 2 (prgm -> .)
    IDENTIFIER      reduce using rule 2 (prgm -> .)
    IF              reduce using rule 2 (prgm -> .)
    WHILE           reduce using rule 2 (prgm -> .)
    PRINT           reduce using rule 2 (prgm -> .)
    FLOAT           reduce using rule 2 (prgm -> .)
    INT             reduce using rule 2 (prgm -> .)
    CHAR            reduce using rule 2 (prgm -> .)
    $end            reduce using rule 2 (prgm -> .)

    prgm                           shift and go to state 1

state 1

    (0) S' -> prgm .
    (1) prgm -> prgm . stmt
    (3) stmt -> . funcdef
    (4) stmt -> . funccall SEMICOLON
    (5) stmt -> . declare
    (6) stmt -> . assign
    (7) stmt -> . ifstmt
    (8) stmt -> . whilestmt
    (9) stmt -> . printstmt
    (21) funcdef -> . FUNCTION type IDENTIFIER funcdefy LCB nulltypeargsx RCB LFB stmt2 RFB fundefexit
    (58) funccall -> . IDENTIFIER LCB nullargs RCB
    (89) declare -> . type vars SEMICOLON
    (51) assign -> . lhs ASSIGN rhs SEMICOLON
    (68) ifstmt -> . IF LCB expr RCB LFB ifbegin stmt2 RFB ifend elsepart
    (75) whilestmt -> . WHILE LCB expr RCB LFB whilebegin stmt2 RFB whileend
    (78) printstmt -> . PRINT LCB printables RCB SEMICOLON
    (90) type -> . FLOAT
    (91) type -> . INT
    (92) type -> . CHAR
    (52) lhs -> . IDENTIFIER
    (53) lhs -> . arrayid
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    FUNCTION        shift and go to state 10
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    PRINT           shift and go to state 16
    FLOAT           shift and go to state 17
    INT             shift and go to state 18
    CHAR            shift and go to state 19

    stmt                           shift and go to state 2
    funcdef                        shift and go to state 3
    funccall                       shift and go to state 4
    declare                        shift and go to state 5
    assign                         shift and go to state 6
    ifstmt                         shift and go to state 7
    whilestmt                      shift and go to state 8
    printstmt                      shift and go to state 9
    type                           shift and go to state 11
    lhs                            shift and go to state 13
    arrayid                        shift and go to state 20
    arrayid1                       shift and go to state 21

state 2

    (1) prgm -> prgm stmt .

    FUNCTION        reduce using rule 1 (prgm -> prgm stmt .)
    IDENTIFIER      reduce using rule 1 (prgm -> prgm stmt .)
    IF              reduce using rule 1 (prgm -> prgm stmt .)
    WHILE           reduce using rule 1 (prgm -> prgm stmt .)
    PRINT           reduce using rule 1 (prgm -> prgm stmt .)
    FLOAT           reduce using rule 1 (prgm -> prgm stmt .)
    INT             reduce using rule 1 (prgm -> prgm stmt .)
    CHAR            reduce using rule 1 (prgm -> prgm stmt .)
    $end            reduce using rule 1 (prgm -> prgm stmt .)


state 3

    (3) stmt -> funcdef .

    FUNCTION        reduce using rule 3 (stmt -> funcdef .)
    IDENTIFIER      reduce using rule 3 (stmt -> funcdef .)
    IF              reduce using rule 3 (stmt -> funcdef .)
    WHILE           reduce using rule 3 (stmt -> funcdef .)
    PRINT           reduce using rule 3 (stmt -> funcdef .)
    FLOAT           reduce using rule 3 (stmt -> funcdef .)
    INT             reduce using rule 3 (stmt -> funcdef .)
    CHAR            reduce using rule 3 (stmt -> funcdef .)
    $end            reduce using rule 3 (stmt -> funcdef .)


state 4

    (4) stmt -> funccall . SEMICOLON

    SEMICOLON       shift and go to state 22


state 5

    (5) stmt -> declare .

    FUNCTION        reduce using rule 5 (stmt -> declare .)
    IDENTIFIER      reduce using rule 5 (stmt -> declare .)
    IF              reduce using rule 5 (stmt -> declare .)
    WHILE           reduce using rule 5 (stmt -> declare .)
    PRINT           reduce using rule 5 (stmt -> declare .)
    FLOAT           reduce using rule 5 (stmt -> declare .)
    INT             reduce using rule 5 (stmt -> declare .)
    CHAR            reduce using rule 5 (stmt -> declare .)
    $end            reduce using rule 5 (stmt -> declare .)


state 6

    (6) stmt -> assign .

    FUNCTION        reduce using rule 6 (stmt -> assign .)
    IDENTIFIER      reduce using rule 6 (stmt -> assign .)
    IF              reduce using rule 6 (stmt -> assign .)
    WHILE           reduce using rule 6 (stmt -> assign .)
    PRINT           reduce using rule 6 (stmt -> assign .)
    FLOAT           reduce using rule 6 (stmt -> assign .)
    INT             reduce using rule 6 (stmt -> assign .)
    CHAR            reduce using rule 6 (stmt -> assign .)
    $end            reduce using rule 6 (stmt -> assign .)


state 7

    (7) stmt -> ifstmt .

    FUNCTION        reduce using rule 7 (stmt -> ifstmt .)
    IDENTIFIER      reduce using rule 7 (stmt -> ifstmt .)
    IF              reduce using rule 7 (stmt -> ifstmt .)
    WHILE           reduce using rule 7 (stmt -> ifstmt .)
    PRINT           reduce using rule 7 (stmt -> ifstmt .)
    FLOAT           reduce using rule 7 (stmt -> ifstmt .)
    INT             reduce using rule 7 (stmt -> ifstmt .)
    CHAR            reduce using rule 7 (stmt -> ifstmt .)
    $end            reduce using rule 7 (stmt -> ifstmt .)


state 8

    (8) stmt -> whilestmt .

    FUNCTION        reduce using rule 8 (stmt -> whilestmt .)
    IDENTIFIER      reduce using rule 8 (stmt -> whilestmt .)
    IF              reduce using rule 8 (stmt -> whilestmt .)
    WHILE           reduce using rule 8 (stmt -> whilestmt .)
    PRINT           reduce using rule 8 (stmt -> whilestmt .)
    FLOAT           reduce using rule 8 (stmt -> whilestmt .)
    INT             reduce using rule 8 (stmt -> whilestmt .)
    CHAR            reduce using rule 8 (stmt -> whilestmt .)
    $end            reduce using rule 8 (stmt -> whilestmt .)


state 9

    (9) stmt -> printstmt .

    FUNCTION        reduce using rule 9 (stmt -> printstmt .)
    IDENTIFIER      reduce using rule 9 (stmt -> printstmt .)
    IF              reduce using rule 9 (stmt -> printstmt .)
    WHILE           reduce using rule 9 (stmt -> printstmt .)
    PRINT           reduce using rule 9 (stmt -> printstmt .)
    FLOAT           reduce using rule 9 (stmt -> printstmt .)
    INT             reduce using rule 9 (stmt -> printstmt .)
    CHAR            reduce using rule 9 (stmt -> printstmt .)
    $end            reduce using rule 9 (stmt -> printstmt .)


state 10

    (21) funcdef -> FUNCTION . type IDENTIFIER funcdefy LCB nulltypeargsx RCB LFB stmt2 RFB fundefexit
    (90) type -> . FLOAT
    (91) type -> . INT
    (92) type -> . CHAR

    FLOAT           shift and go to state 17
    INT             shift and go to state 18
    CHAR            shift and go to state 19

    type                           shift and go to state 23

state 11

    (89) declare -> type . vars SEMICOLON
    (93) vars -> . var SEPARATORS vars
    (94) vars -> . var
    (95) var -> . IDENTIFIER val
    (96) var -> . arrayvar
    (97) arrayvar -> . arrayvar LSB INTNUM RSB
    (98) arrayvar -> . IDENTIFIER LSB INTNUM RSB

    IDENTIFIER      shift and go to state 26

    vars                           shift and go to state 24
    var                            shift and go to state 25
    arrayvar                       shift and go to state 27

state 12

    (58) funccall -> IDENTIFIER . LCB nullargs RCB
    (52) lhs -> IDENTIFIER .
    (101) arrayid1 -> IDENTIFIER . LSB index RSB

    LCB             shift and go to state 28
    ASSIGN          reduce using rule 52 (lhs -> IDENTIFIER .)
    LSB             shift and go to state 29


state 13

    (51) assign -> lhs . ASSIGN rhs SEMICOLON

    ASSIGN          shift and go to state 30


state 14

    (68) ifstmt -> IF . LCB expr RCB LFB ifbegin stmt2 RFB ifend elsepart

    LCB             shift and go to state 31


state 15

    (75) whilestmt -> WHILE . LCB expr RCB LFB whilebegin stmt2 RFB whileend

    LCB             shift and go to state 32


state 16

    (78) printstmt -> PRINT . LCB printables RCB SEMICOLON

    LCB             shift and go to state 33


state 17

    (90) type -> FLOAT .

    IDENTIFIER      reduce using rule 90 (type -> FLOAT .)
    RCB             reduce using rule 90 (type -> FLOAT .)


state 18

    (91) type -> INT .

    IDENTIFIER      reduce using rule 91 (type -> INT .)
    RCB             reduce using rule 91 (type -> INT .)


state 19

    (92) type -> CHAR .

    IDENTIFIER      reduce using rule 92 (type -> CHAR .)
    RCB             reduce using rule 92 (type -> CHAR .)


state 20

    (53) lhs -> arrayid .

    ASSIGN          reduce using rule 53 (lhs -> arrayid .)


state 21

    (99) arrayid -> arrayid1 .
    (100) arrayid1 -> arrayid1 . LSB index RSB

    ASSIGN          reduce using rule 99 (arrayid -> arrayid1 .)
    SEPARATORS      reduce using rule 99 (arrayid -> arrayid1 .)
    RCB             reduce using rule 99 (arrayid -> arrayid1 .)
    MULTOP          reduce using rule 99 (arrayid -> arrayid1 .)
    ARITHOP         reduce using rule 99 (arrayid -> arrayid1 .)
    RELOP           reduce using rule 99 (arrayid -> arrayid1 .)
    LOG             reduce using rule 99 (arrayid -> arrayid1 .)
    AND             reduce using rule 99 (arrayid -> arrayid1 .)
    OR              reduce using rule 99 (arrayid -> arrayid1 .)
    SEMICOLON       reduce using rule 99 (arrayid -> arrayid1 .)
    LSB             shift and go to state 34


state 22

    (4) stmt -> funccall SEMICOLON .

    FUNCTION        reduce using rule 4 (stmt -> funccall SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (stmt -> funccall SEMICOLON .)
    IF              reduce using rule 4 (stmt -> funccall SEMICOLON .)
    WHILE           reduce using rule 4 (stmt -> funccall SEMICOLON .)
    PRINT           reduce using rule 4 (stmt -> funccall SEMICOLON .)
    FLOAT           reduce using rule 4 (stmt -> funccall SEMICOLON .)
    INT             reduce using rule 4 (stmt -> funccall SEMICOLON .)
    CHAR            reduce using rule 4 (stmt -> funccall SEMICOLON .)
    $end            reduce using rule 4 (stmt -> funccall SEMICOLON .)


state 23

    (21) funcdef -> FUNCTION type . IDENTIFIER funcdefy LCB nulltypeargsx RCB LFB stmt2 RFB fundefexit

    IDENTIFIER      shift and go to state 35


state 24

    (89) declare -> type vars . SEMICOLON

    SEMICOLON       shift and go to state 36


state 25

    (93) vars -> var . SEPARATORS vars
    (94) vars -> var .

    SEPARATORS      shift and go to state 37
    SEMICOLON       reduce using rule 94 (vars -> var .)


state 26

    (95) var -> IDENTIFIER . val
    (98) arrayvar -> IDENTIFIER . LSB INTNUM RSB
    (104) val -> . ASSIGN expr
    (105) val -> . ASSIGN inputstmt
    (106) val -> . ASSIGN funccall
    (107) val -> .

    LSB             shift and go to state 39
    ASSIGN          shift and go to state 40
    SEPARATORS      reduce using rule 107 (val -> .)
    SEMICOLON       reduce using rule 107 (val -> .)

    val                            shift and go to state 38

state 27

    (96) var -> arrayvar .
    (97) arrayvar -> arrayvar . LSB INTNUM RSB

    SEPARATORS      reduce using rule 96 (var -> arrayvar .)
    SEMICOLON       reduce using rule 96 (var -> arrayvar .)
    LSB             shift and go to state 41


state 28

    (58) funccall -> IDENTIFIER LCB . nullargs RCB
    (59) nullargs -> . args
    (60) nullargs -> .
    (61) args -> . args SEPARATORS arg
    (62) args -> . arg
    (63) arg -> . IDENTIFIER
    (64) arg -> . prefix INTNUM
    (65) arg -> . prefix FLOATNUM
    (66) arg -> . CHARACTER
    (67) arg -> . arrayid
    (49) prefix -> . ARITHOP
    (50) prefix -> .
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    RCB             reduce using rule 60 (nullargs -> .)
    IDENTIFIER      shift and go to state 42
    CHARACTER       shift and go to state 47
    ARITHOP         shift and go to state 49
    INTNUM          reduce using rule 50 (prefix -> .)
    FLOATNUM        reduce using rule 50 (prefix -> .)

    nullargs                       shift and go to state 43
    args                           shift and go to state 44
    arg                            shift and go to state 45
    prefix                         shift and go to state 46
    arrayid                        shift and go to state 48
    arrayid1                       shift and go to state 21

state 29

    (101) arrayid1 -> IDENTIFIER LSB . index RSB
    (102) index -> . INTNUM
    (103) index -> . IDENTIFIER

    INTNUM          shift and go to state 52
    IDENTIFIER      shift and go to state 50

    index                          shift and go to state 51

state 30

    (51) assign -> lhs ASSIGN . rhs SEMICOLON
    (54) rhs -> . inputstmt
    (55) rhs -> . expr
    (56) rhs -> . funccall
    (57) inputstmt -> . INPUT LCB type RCB
    (31) expr -> . expr OR andterm
    (32) expr -> . andterm
    (58) funccall -> . IDENTIFIER LCB nullargs RCB
    (33) andterm -> . andterm AND equalterm
    (34) andterm -> . equalterm
    (35) equalterm -> . equalterm LOG relopterm
    (36) equalterm -> . relopterm
    (37) relopterm -> . relopterm RELOP arithterm
    (38) relopterm -> . arithterm
    (39) arithterm -> . arithterm ARITHOP multerm
    (40) arithterm -> . multerm
    (41) multerm -> . multerm MULTOP singleterm
    (42) multerm -> . singleterm
    (43) singleterm -> . IDENTIFIER
    (44) singleterm -> . prefix INTNUM
    (45) singleterm -> . prefix FLOATNUM
    (46) singleterm -> . CHARACTER
    (47) singleterm -> . LCB expr RCB
    (48) singleterm -> . arrayid
    (49) prefix -> . ARITHOP
    (50) prefix -> .
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    INPUT           shift and go to state 57
    IDENTIFIER      shift and go to state 60
    CHARACTER       shift and go to state 67
    LCB             shift and go to state 58
    ARITHOP         shift and go to state 49
    INTNUM          reduce using rule 50 (prefix -> .)
    FLOATNUM        reduce using rule 50 (prefix -> .)

    rhs                            shift and go to state 53
    inputstmt                      shift and go to state 54
    expr                           shift and go to state 55
    funccall                       shift and go to state 56
    andterm                        shift and go to state 59
    equalterm                      shift and go to state 61
    relopterm                      shift and go to state 62
    arithterm                      shift and go to state 63
    multerm                        shift and go to state 64
    singleterm                     shift and go to state 65
    prefix                         shift and go to state 66
    arrayid                        shift and go to state 68
    arrayid1                       shift and go to state 21

state 31

    (68) ifstmt -> IF LCB . expr RCB LFB ifbegin stmt2 RFB ifend elsepart
    (31) expr -> . expr OR andterm
    (32) expr -> . andterm
    (33) andterm -> . andterm AND equalterm
    (34) andterm -> . equalterm
    (35) equalterm -> . equalterm LOG relopterm
    (36) equalterm -> . relopterm
    (37) relopterm -> . relopterm RELOP arithterm
    (38) relopterm -> . arithterm
    (39) arithterm -> . arithterm ARITHOP multerm
    (40) arithterm -> . multerm
    (41) multerm -> . multerm MULTOP singleterm
    (42) multerm -> . singleterm
    (43) singleterm -> . IDENTIFIER
    (44) singleterm -> . prefix INTNUM
    (45) singleterm -> . prefix FLOATNUM
    (46) singleterm -> . CHARACTER
    (47) singleterm -> . LCB expr RCB
    (48) singleterm -> . arrayid
    (49) prefix -> . ARITHOP
    (50) prefix -> .
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    IDENTIFIER      shift and go to state 70
    CHARACTER       shift and go to state 67
    LCB             shift and go to state 58
    ARITHOP         shift and go to state 49
    INTNUM          reduce using rule 50 (prefix -> .)
    FLOATNUM        reduce using rule 50 (prefix -> .)

    expr                           shift and go to state 69
    andterm                        shift and go to state 59
    equalterm                      shift and go to state 61
    relopterm                      shift and go to state 62
    arithterm                      shift and go to state 63
    multerm                        shift and go to state 64
    singleterm                     shift and go to state 65
    prefix                         shift and go to state 66
    arrayid                        shift and go to state 68
    arrayid1                       shift and go to state 21

state 32

    (75) whilestmt -> WHILE LCB . expr RCB LFB whilebegin stmt2 RFB whileend
    (31) expr -> . expr OR andterm
    (32) expr -> . andterm
    (33) andterm -> . andterm AND equalterm
    (34) andterm -> . equalterm
    (35) equalterm -> . equalterm LOG relopterm
    (36) equalterm -> . relopterm
    (37) relopterm -> . relopterm RELOP arithterm
    (38) relopterm -> . arithterm
    (39) arithterm -> . arithterm ARITHOP multerm
    (40) arithterm -> . multerm
    (41) multerm -> . multerm MULTOP singleterm
    (42) multerm -> . singleterm
    (43) singleterm -> . IDENTIFIER
    (44) singleterm -> . prefix INTNUM
    (45) singleterm -> . prefix FLOATNUM
    (46) singleterm -> . CHARACTER
    (47) singleterm -> . LCB expr RCB
    (48) singleterm -> . arrayid
    (49) prefix -> . ARITHOP
    (50) prefix -> .
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    IDENTIFIER      shift and go to state 70
    CHARACTER       shift and go to state 67
    LCB             shift and go to state 58
    ARITHOP         shift and go to state 49
    INTNUM          reduce using rule 50 (prefix -> .)
    FLOATNUM        reduce using rule 50 (prefix -> .)

    expr                           shift and go to state 71
    andterm                        shift and go to state 59
    equalterm                      shift and go to state 61
    relopterm                      shift and go to state 62
    arithterm                      shift and go to state 63
    multerm                        shift and go to state 64
    singleterm                     shift and go to state 65
    prefix                         shift and go to state 66
    arrayid                        shift and go to state 68
    arrayid1                       shift and go to state 21

state 33

    (78) printstmt -> PRINT LCB . printables RCB SEMICOLON
    (79) printables -> . printables SEPARATORS printable
    (80) printables -> . printable
    (81) printable -> . STRING
    (82) printable -> . IDENTIFIER
    (83) printable -> . arrayid
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    STRING          shift and go to state 74
    IDENTIFIER      shift and go to state 75

    printables                     shift and go to state 72
    printable                      shift and go to state 73
    arrayid                        shift and go to state 76
    arrayid1                       shift and go to state 21

state 34

    (100) arrayid1 -> arrayid1 LSB . index RSB
    (102) index -> . INTNUM
    (103) index -> . IDENTIFIER

    INTNUM          shift and go to state 52
    IDENTIFIER      shift and go to state 50

    index                          shift and go to state 77

state 35

    (21) funcdef -> FUNCTION type IDENTIFIER . funcdefy LCB nulltypeargsx RCB LFB stmt2 RFB fundefexit
    (22) funcdefy -> .

    LCB             reduce using rule 22 (funcdefy -> .)

    funcdefy                       shift and go to state 78

state 36

    (89) declare -> type vars SEMICOLON .

    FUNCTION        reduce using rule 89 (declare -> type vars SEMICOLON .)
    IDENTIFIER      reduce using rule 89 (declare -> type vars SEMICOLON .)
    IF              reduce using rule 89 (declare -> type vars SEMICOLON .)
    WHILE           reduce using rule 89 (declare -> type vars SEMICOLON .)
    PRINT           reduce using rule 89 (declare -> type vars SEMICOLON .)
    FLOAT           reduce using rule 89 (declare -> type vars SEMICOLON .)
    INT             reduce using rule 89 (declare -> type vars SEMICOLON .)
    CHAR            reduce using rule 89 (declare -> type vars SEMICOLON .)
    $end            reduce using rule 89 (declare -> type vars SEMICOLON .)
    RFB             reduce using rule 89 (declare -> type vars SEMICOLON .)
    RETURN          reduce using rule 89 (declare -> type vars SEMICOLON .)
    CONTINUE        reduce using rule 89 (declare -> type vars SEMICOLON .)
    BREAK           reduce using rule 89 (declare -> type vars SEMICOLON .)


state 37

    (93) vars -> var SEPARATORS . vars
    (93) vars -> . var SEPARATORS vars
    (94) vars -> . var
    (95) var -> . IDENTIFIER val
    (96) var -> . arrayvar
    (97) arrayvar -> . arrayvar LSB INTNUM RSB
    (98) arrayvar -> . IDENTIFIER LSB INTNUM RSB

    IDENTIFIER      shift and go to state 26

    var                            shift and go to state 25
    vars                           shift and go to state 79
    arrayvar                       shift and go to state 27

state 38

    (95) var -> IDENTIFIER val .

    SEPARATORS      reduce using rule 95 (var -> IDENTIFIER val .)
    SEMICOLON       reduce using rule 95 (var -> IDENTIFIER val .)


state 39

    (98) arrayvar -> IDENTIFIER LSB . INTNUM RSB

    INTNUM          shift and go to state 80


state 40

    (104) val -> ASSIGN . expr
    (105) val -> ASSIGN . inputstmt
    (106) val -> ASSIGN . funccall
    (31) expr -> . expr OR andterm
    (32) expr -> . andterm
    (57) inputstmt -> . INPUT LCB type RCB
    (58) funccall -> . IDENTIFIER LCB nullargs RCB
    (33) andterm -> . andterm AND equalterm
    (34) andterm -> . equalterm
    (35) equalterm -> . equalterm LOG relopterm
    (36) equalterm -> . relopterm
    (37) relopterm -> . relopterm RELOP arithterm
    (38) relopterm -> . arithterm
    (39) arithterm -> . arithterm ARITHOP multerm
    (40) arithterm -> . multerm
    (41) multerm -> . multerm MULTOP singleterm
    (42) multerm -> . singleterm
    (43) singleterm -> . IDENTIFIER
    (44) singleterm -> . prefix INTNUM
    (45) singleterm -> . prefix FLOATNUM
    (46) singleterm -> . CHARACTER
    (47) singleterm -> . LCB expr RCB
    (48) singleterm -> . arrayid
    (49) prefix -> . ARITHOP
    (50) prefix -> .
    (99) arrayid -> . arrayid1
    (100) arrayid1 -> . arrayid1 LSB index RSB
    (101) arrayid1 -> . IDENTIFIER LSB index RSB

    INPUT           shift and go to state 57
    IDENTIFIER      shift and go to state 60
    CHARACTER       shift and go to state 67
    LCB             shift and go to state 58
    ARITHOP         shift and go to state 49
    INTNUM          reduce using rule 50 (prefix -> .)
    FLOATNUM        reduce using rule 50 (prefix -> .)

    expr                           shift and go to state 81
    inputstmt                      shift and go to state 82
    funccall                       shift and go to state 83
    andterm                        shift and go to state 59
    equalterm                      shift and go to state 61
    relopterm                      shift and go to state 62
    arithterm                      shift and go to state 63
    multerm                        shift and go to state 64
    singleterm                     shift and go to state 65
    prefix                         shift and go to state 66
    arrayid                        shift and go to state 68
    arrayid1                       shift and go to state 21

state 41

    (97) arrayvar -> arrayvar LSB . INTNUM RSB

    INTNUM          shift and go to state 84


state 42

    (63) arg -> IDENTIFIER .
    (101) arrayid1 -> IDENTIFIER . LSB index RSB

    SEPARATORS      reduce using rule 63 (arg -> IDENTIFIER .)
    RCB             reduce using rule 63 (arg -> IDENTIFIER .)
    LSB             shift and go to state 29


state 43

    (58) funccall -> IDENTIFIER LCB nullargs . RCB

    RCB             shift and go to state 85


state 44

    (59) nullargs -> args .
    (61) args -> args . SEPARATORS arg

    RCB             reduce using rule 59 (nullargs -> args .)
    SEPARATORS      shift and go to state 86


state 45

    (62) args -> arg .

    SEPARATORS      reduce using rule 62 (args -> arg .)
    RCB             reduce using rule 62 (args -> arg .)


state 46

    (64) arg -> prefix . INTNUM
    (65) arg -> prefix . FLOATNUM

    INTNUM          shift and go to state 87
    FLOATNUM        shift and go to state 88


state 47

    (66) arg -> CHARACTER .

    SEPARATORS      reduce using rule 66 (arg -> CHARACTER .)
    RCB             reduce using rule 66 (arg -> CHARACTER .)


state 48

    (67) arg -> arrayid .

    SEPARATORS      reduce using rule 67 (arg -> arrayid .)
    RCB             reduce using rule 67 (arg -> arrayid .)


state 49

    (49) prefix -> ARITHOP .

    INTNUM          reduce using rule 49 (prefix -> ARITHOP .)
    FLOATNUM        reduce using rule 49 (prefix -> ARITHOP .)


state 50

    (103) index -> IDENTIFIER .

    RSB             reduce using rule 103 (index -> IDENTIFIER .)


state 51

    (101) arrayid1 -> IDENTIFIER LSB index . RSB

    RSB             shift and go to state 89


state 52

    (102) index -> INTNUM .
